--- a/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
@@ -214,8 +214,8 @@
                 android:layout_width="@dimen/dp_1"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_zzxl"
-                app:layout_constraintEnd_toStartOf="@+id/tv_jwyj"
+                app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
+                app:layout_constraintEnd_toStartOf="@+id/tv_zzxl"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:background="@color/color_ffd7b4"/>
 
