--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -31,6 +31,10 @@
     <color name="color_eac71c">#eac71c</color>
     <color name="color_0b1342">#02051C</color>
     <color name="color_eb8b49">#EB8B49</color>
+    <color name="color_23cefd">#23cefd</color>
+    <color name="color_00E7D5">#00E7D5</color>
+    <color name="color_01B7FF">#01B7FF</color>
+    <color name="color_DE946D">#DE946D</color>
 
     <color name="color_ffe1e2">#ffe1e2</color>
     <color name="color_ff6569">#ff6569</color>
