--- a/Cadres/app/src/main/res/layout/item_ty_zsty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_zsty.xml
@@ -28,16 +28,95 @@
             android:background="@mipmap/ic_zs_line_bg"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <View
+        <LinearLayout
             android:id="@+id/view_legend"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="@+id/view_bottom_zs"
             app:layout_constraintStart_toStartOf="@+id/view_bottom_zs"
             app:layout_constraintEnd_toEndOf="@+id/view_bottom_zs"
             android:layout_marginTop="@dimen/dp_30"
-            android:layout_marginStart="@dimen/dp_30"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:layout_marginBottom="@dimen/dp_30"
-            android:layout_height="@dimen/dp_40"/>
+            android:layout_height="@dimen/dp_40">
+
+            <View
+                android:background="@color/color_00E7D5"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_15"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:text="调整到空缺职位任职"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/color_23cefd"/>
+
+            <View
+                android:background="@color/color_01B7FF"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_15"
+                android:layout_marginStart="@dimen/dp_30"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:textSize="@dimen/sp_14"
+                android:text="职务与职级并行"
+                android:textColor="@color/color_23cefd"/>
+
+            <View
+                android:background="@color/color_DE946D"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_15"
+                android:layout_marginStart="@dimen/dp_30"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:textSize="@dimen/sp_14"
+                android:text="到龄退休"
+                android:textColor="@color/color_23cefd"/>
+
+            <View
+                android:background="@mipmap/ic_legend_blue"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginStart="@dimen/dp_30"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginStart="@dimen/dp_10"
+                android:text="超配数"
+                android:textColor="@color/color_23cefd"/>
+
+            <View
+                android:background="@mipmap/ic_legend_red"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginStart="@dimen/dp_30"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginStart="@dimen/dp_10"
+                android:text="全年可用空缺职位数"
+                android:textColor="@color/color_23cefd"/>
+
+        </LinearLayout>
+
+
         
 
         <com.github.mikephil.charting.charts.CombinedChart
