--- a/Cadres/app/src/main/res/layout/fragment_yjjc_meeting.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_meeting.xml
@@ -172,10 +172,48 @@
         tools:text="会议内容"
         android:layout_height="wrap_content"/>
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_fj"
+        android:layout_width="wrap_content"
+        app:constraint_referenced_ids="view_fj,tv_fj,recycle_fj"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_height="wrap_content"/>
+
+    <View
+        android:id="@+id/view_fj"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@+id/view_top"
+        app:layout_constraintTop_toBottomOf="@+id/view_hynr"
+        app:layout_constraintBottom_toBottomOf="@+id/recycle_fj"
+        android:layout_marginTop="@dimen/dp_20"
+        app:layout_constraintEnd_toEndOf="@+id/view_top"
+        android:layout_marginEnd="@dimen/dp_20"
+        android:layout_marginStart="@dimen/dp_20"/>
+
+    <TextView
+        android:id="@+id/tv_fj"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/view_fj"
+        app:layout_constraintTop_toTopOf="@+id/view_fj"
+        android:text="相关材料："/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_fj"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/tv_fj"
+        android:overScrollMode="never"
+        app:layout_constraintTop_toTopOf="@+id/tv_fj"
+        app:layout_constraintEnd_toEndOf="@+id/view_fj"
+        tools:text="会议内容"
+        android:layout_height="wrap_content"/>
+
     <View
         android:id="@+id/view_top_line"
         android:layout_width="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_hynr_content"
+        app:layout_constraintTop_toBottomOf="@+id/view_fj"
         android:layout_marginTop="@dimen/dp_30"
         android:layout_marginStart="@dimen/dp_10"
         app:layout_constraintStart_toStartOf="parent"
