7、干部名册详情中基本信息和列表中的内容，尽量保持左右留点空白（太靠边线了）

--- a/Cadres/app/src/main/res/layout/fragment_gb_resume.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_resume.xml
@@ -18,6 +18,8 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -40,6 +42,8 @@
         android:textStyle="bold"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_start_time"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -61,6 +65,8 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_end_time"
@@ -83,6 +89,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_lx"
         app:layout_constraintEnd_toEndOf="parent"
