--- a/Cadres/app/src/main/res/layout/fragment_gb_train.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_train.xml
@@ -19,6 +19,8 @@
         android:layout_height="0dp"
         android:textStyle="bold"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -40,6 +42,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_kssj"
@@ -62,6 +66,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         android:maxLines="3"
@@ -85,6 +91,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_pxts"
@@ -109,6 +117,8 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_pxb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxlb"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -130,6 +140,8 @@
         android:layout_height="0dp"
         android:textStyle="bold"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxjg"
@@ -151,6 +163,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_pxlb"
@@ -174,6 +188,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjg"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxnr"
@@ -196,6 +212,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxfs"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
