--- a/Cadres/app/src/main/res/layout/item_gb_award.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_award.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:minHeight="@dimen/dp_50"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +33,8 @@
         android:layout_width="@dimen/dp_160"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_jclx"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,6 +55,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_jcmc"
@@ -70,6 +76,8 @@
     <TextView
         android:id="@+id/tv_jllx"
         android:layout_width="@dimen/dp_120"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
@@ -92,6 +100,8 @@
         android:layout_width="@dimen/dp_120"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jllx"
         app:layout_constraintTop_toTopOf="parent"
@@ -112,6 +122,8 @@
         android:layout_width="@dimen/dp_120"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_cflx"
         app:layout_constraintTop_toTopOf="parent"
@@ -133,6 +145,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jcyy"
         app:layout_constraintEnd_toEndOf="parent"
