--- a/Cadres/app/src/main/res/layout/item_gb_family.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_family.xml
@@ -12,6 +12,8 @@
         android:minHeight="@dimen/dp_50"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +34,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cw"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +57,8 @@
         android:gravity="center"
         android:textSize="14sp"
         android:maxLines="3"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_xm"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,6 +79,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +101,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zzmm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
