--- a/Cadres/app/src/main/res/layout/item_gb_now.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_now.xml
@@ -13,6 +13,8 @@
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_rzqk"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zwdw"
         app:layout_constraintEnd_toStartOf="@+id/tv_zwmc"
@@ -53,6 +57,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_rzqk"
@@ -75,6 +81,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zwmc"
         app:layout_constraintEnd_toStartOf="@+id/tv_rzsj"
@@ -97,6 +105,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzyy"
         app:layout_constraintEnd_toStartOf="@+id/tv_rzwh"
@@ -119,6 +129,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzsj"
         app:layout_constraintEnd_toEndOf="parent"
