--- a/Cadres/app/src/main/res/layout/item_gb_rank.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_rank.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:minHeight="@dimen/dp_50"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zt"
         app:layout_constraintEnd_toStartOf="@+id/tv_pzsj"
@@ -54,6 +58,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjb"
@@ -76,6 +82,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_pzsj"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjbsj"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +106,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_xsdyjb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
