--- a/Cadres/app/src/main/res/layout/fragment_gb_award.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_award.xml
@@ -18,6 +18,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -39,6 +41,8 @@
         android:layout_width="@dimen/dp_160"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_jclx"
@@ -61,6 +65,8 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_jcmc"
@@ -83,6 +89,8 @@
         android:textStyle="bold"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -103,6 +111,8 @@
         android:layout_width="@dimen/dp_120"
         android:textStyle="bold"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jllx"
@@ -126,6 +136,8 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cflx"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -147,6 +159,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jcyy"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
