--- a/Cadres/app/src/main/res/layout/fragment_gb_family.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_family.xml
@@ -18,6 +18,8 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -39,6 +41,8 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_cw"
@@ -59,6 +63,8 @@
         android:id="@+id/tv_csny"
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="14sp"
@@ -83,6 +89,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -103,6 +111,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzmm"
