--- a/Cadres/app/src/main/res/layout/fragment_gb_now.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_now.xml
@@ -18,6 +18,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -40,6 +42,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zwdw"
@@ -63,6 +67,8 @@
         android:layout_height="0dp"
         android:textStyle="bold"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_rzqk"
@@ -85,6 +91,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zwmc"
@@ -107,6 +115,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzyy"
@@ -129,6 +139,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzsj"
