--- a/Cadres/app/src/main/res/layout/fragment_gb_rank.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_rank.xml
@@ -19,6 +19,8 @@
         android:layout_height="0dp"
         android:textStyle="bold"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -40,6 +42,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zt"
@@ -64,6 +68,8 @@
         android:gravity="center"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjb"
@@ -86,6 +92,8 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pzsj"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjbsj"
@@ -108,6 +116,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_xsdyjb"
