--- a/Cadres/app/src/main/res/layout/item_gb_train.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_train.xml
@@ -12,6 +12,8 @@
         android:minHeight="@dimen/dp_50"
         android:gravity="center"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_jssj"
@@ -32,6 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_kssj"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxts"
@@ -53,6 +57,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_jssj"
@@ -74,6 +80,8 @@
         android:id="@+id/tv_pxb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxts"
@@ -95,6 +103,8 @@
         android:id="@+id/tv_pxjb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxb"
@@ -117,6 +127,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxjg"
@@ -139,6 +151,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_pxlb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxfs"
         app:layout_constraintTop_toTopOf="parent"
@@ -160,6 +174,8 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjg"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxnr"
         app:layout_constraintTop_toTopOf="parent"
@@ -180,6 +196,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxfs"
         app:layout_constraintEnd_toEndOf="parent"
