2、大数据推演中结构推演中的部门选择框样式调整和部门搜索功能

--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -36,6 +36,8 @@
     <color name="color_01B7FF">#01B7FF</color>
     <color name="color_DE946D">#DE946D</color>
 
+    <color name="color_66131540">#1A2640</color>
+
     <color name="color_ffe1e2">#ffe1e2</color>
     <color name="color_ff6569">#ff6569</color>
     <color name="color_1eb0fc">#1EB0FC</color>
