--- a/Cadres/app/src/main/res/layout/dialog_list2.xml
+++ b/Cadres/app/src/main/res/layout/dialog_list2.xml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_parent"
     android:layout_width="@dimen/dp_200"
     android:layout_height="@dimen/dp_400"
+    android:background="@drawable/shape_01b7ff_66131540_r10"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
+
+
+    <EditText
+        android:id="@+id/et_left_search"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_42"
+        android:background="@color/white"
+        android:layout_marginStart="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_20"
+        android:hint="搜索"
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:maxLength="10"
+        android:maxLines="1"
+        android:drawableLeft="@mipmap/ic_search"
+        android:drawablePadding="@dimen/dp_10"
+        android:paddingStart="@dimen/dp_15"
+        android:paddingEnd="@dimen/dp_15"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:overScrollMode="never"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/dp_20"/>
 
-</RelativeLayout>
+</LinearLayout>
