--- a/Cadres/app/src/main/res/layout/dialog_list_item2.xml
+++ b/Cadres/app/src/main/res/layout/dialog_list_item2.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
     android:id="@+id/tv_text"
-    android:layout_width="@dimen/dp_200"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="left"
-    android:paddingStart="@dimen/dp_15"
-    android:paddingEnd="@dimen/dp_15"
-    android:paddingTop="@dimen/dp_20">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingStart="@dimen/dp_20"
+    android:paddingEnd="@dimen/dp_20"
+    android:paddingTop="@dimen/dp_10"
+    android:textColor="@color/white"
+    android:paddingBottom="@dimen/dp_10"
+    tools:text="标题">
 
 </TextView>
