结构推演中的年龄架构改成年龄结构 首页 市管职务名册表 改为  市管职务名称表 首页 研究决策 改为 任免决策 搜索中常用搜索中的 人大主席 改为 人大主任 ， 人大副主席 改为 人大副主任

--- a/Cadres/app/src/main/res/layout/activity_home.xml
+++ b/Cadres/app/src/main/res/layout/activity_home.xml
@@ -103,7 +103,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="市管职务名册表"
+            android:text="市管职务名称表"
             android:textSize="@dimen/sp_20"
             android:textColor="@color/white"
             android:layout_marginTop="@dimen/dp_10"/>
@@ -149,7 +149,7 @@
 
     </LinearLayout>
 
-<!--研究决策-->
+<!--任免决策-->
     <View
         android:id="@+id/view_yjjc"
         android:layout_width="0dp"
@@ -179,7 +179,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="研究决策"
+            android:text="任免决策"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_20"
             android:layout_marginTop="@dimen/dp_10"/>
