--- a/Cadres/app/src/main/res/layout/item_ty_jgty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_jgty.xml
@@ -247,7 +247,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="年龄架构"
+            android:text="年龄结构"
             app:layout_constraintTop_toTopOf="@+id/iv_jg_nljg"
             app:layout_constraintBottom_toBottomOf="@+id/iv_jg_nljg"
             app:layout_constraintStart_toStartOf="@+id/iv_jg_nljg"
