--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -257,7 +257,7 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="职务级别"/>
+                android:text="现任职务级别"/>
 
             <TextView
                 android:id="@+id/tv_rzjsj"
@@ -268,7 +268,7 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任职级时间"/>
+                android:text="现任职级时间"/>
 
             <TextView
                 android:id="@+id/tv_sex"
