3、任免决策中部务会议和书记专题会议中不展示常务会意见，任免干部列表加入序号栏。

--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
@@ -459,6 +459,14 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_cwhyj"
+        android:layout_width="wrap_content"
+        app:constraint_referenced_ids=
+            "tv_cwhyj_yxp,tv_cwhyj_dps,tv_cwhyj_jg"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/tv_cwhyj_yxp"
         android:layout_width="@dimen/dp_60"
