--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre_left.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre_left.xml
@@ -42,13 +42,34 @@
         android:background="@color/color_ffd7b4"/>
 
     <TextView
+        android:id="@+id/tv_xh"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_tip2"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        tools:text="111"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:background="@color/color_ffd7b4"/>
+
+    <TextView
         android:id="@+id/tv_name"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        app:layout_constraintStart_toEndOf="@+id/tv_tip2"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="姓名"/>
