--- a/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
@@ -29,6 +29,8 @@
         android:id="@+id/tv_xrzw"
         android:layout_width="@dimen/dp_160"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,6 +73,8 @@
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="拟任免(提名)职务"/>
 
